--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html, body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-direction: column;
   }
   canvas {
     display: block;
